<resources>
    <string name="app_name">ActiveCampus</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="follow">我的关注</string>
    <string name="history">历史</string>
    <string name="friend">好友</string>
    <string name="newActivity">发布活动</string>
    <string name="publish">发表</string>
    <string name="recent_scan">最近浏览</string>
    <string name="chat_room">聊天室</string>
    <string name="load_finish">已全部加载完</string>

    <string name="permission_write_external_rationale">请允许存取外部存储已选择相片</string>

    <string name="ok">好</string>
    <string name="done">完成</string>
    <string name="camera">相机</string>
    <string name="image_directory">Camera</string>

    <string name="title_folder">Folder</string>
    <string name="title_select_image">选择照片</string>
    <string name="title_permission_denied">没有权限</string>

    <string name="selected">已选择 %d</string>
    <string name="selected_with_limit">已选择 %1$d/%2$d</string>

    <string name="error_create_image_file">建立相片档案失败</string>
    <string name="error_no_camera">找不到相机</string>
    <string name="error_null_cursor">哦，发生问题了</string>

    <string name="msg_empty_images">找不到相片</string>
    <string name="msg_no_write_external_permission">请允许存取外部存储已选择相片</string>
    <string name="msg_no_camera_permission">请允许存取相机已拍摄照片</string>
    <string name="msg_limit_images">已达到最多选择数量</string>
    <string name="send">发送</string>
    <string name="et_pwd">密码</string>
    <string name="et_userName">账号</string>
    <string name="leave_pwd">忘记密码</string>
    <string name="save_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="newUserRegister">新用户注册</string>
    <string name="register">注册</string>
    <string name="phonenum">手机号</string>
    <string name="chechcode">验证码</string>
    <string name="recieveChceckCode">获取验证码</string>
    <string name="refisterRightnow">立即注册</string>
    <string name="addRes">完善资料</string>
    <string name="startApp">进入活力校园</string>
    <string name="selectpicture">选取图片</string>
    <string name="feedback">反馈</string>
    <string name="logining">正在登录,请稍后..</string>
    <string name="my">我的</string>
    <string name="content">好好学习天天向上好好学习天天向上好好学习天天向上好好
        学习天天向上好好学习天天向上好好学习天天向上好好学习天天向上好好学习天天向上
        学习天天向上好好学习天天向上好好学习天天向上好好学习天天向上好好学习天天向上
        学习天天向上好好学习天天向上好好学习天天向上好好学习天天向上好好学习天天向上
        学习天天向上好好学习天天向上好好学习天天向上好好学习天天向上好好学习天天向上
    </string>
    <string name="reviseRes">修改资料</string>
    <string name="save">保存</string>
    <string name="head">头像</string>
    <string name="nick">昵称</string>
    <string name="school">所在学校</string>
    <string name="reduce">个人简介</string>
    <string name="contact">联系方式</string>
    <string name="phone">手机</string>
    <string name="qq">qq</string>
    <string name="weixin">微信</string>
    <string name="skill">技能展示</string>
    <string name="habit">喜好</string>
    <string name="lostthing">输入搜索物品</string>
    <string name="motto">座右铭</string>
</resources>
