<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_login"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg_login" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/xml_et_bg">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/et_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/phonenum"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_checkCode"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/ll_user"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_et_bg">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_code" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/chechcode"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/recieveCode"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/ll_user"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/ll_checkCode"
        android:background="@drawable/xml_recieve_check_code"
        android:gravity="center"
        android:text="@string/recieveChceckCode"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_checkCode"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_et_bg">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_pwd" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/et_pwd"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:text="@string/refisterRightnow"
        android:textColor="@color/white"
        android:layout_below="@id/ll_pwd"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@drawable/xml_bg_login"
        android:layout_width="match_parent"
        android:layout_height="50dp" />




</RelativeLayout>