<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/contentView"
    android:background="@drawable/ic_bg_login"
    >


    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     />

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/xml_et_bg">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_user" />

        <EditText
            android:id="@+id/et_account"
            android:hint="@string/et_userName"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_user"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/xml_et_bg">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_pwd" />

        <EditText
            android:id="@+id/et_pwd"
            android:hint="@string/et_pwd"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null" />
    </LinearLayout>

    <Switch
        android:layout_below="@id/ll_pwd"
        android:id="@+id/btn_swith"
        android:layout_marginTop="5dp"
        android:layout_width="50dp"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_toRightOf="@id/btn_swith"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/ll_pwd"
        android:textColor="@color/white"
        android:text="@string/save_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@id/ll_pwd"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:textColor="@color/white"
        android:text="@string/leave_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_below="@id/ll_pwd"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@drawable/xml_bg_login"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/tv_register"
        android:layout_below="@id/tv_login"
        android:textColor="@color/white"
        android:text="@string/newUserRegister"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/thirdPart"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentLeft="true"
            android:background="#55ffffff"
            android:layout_centerVertical="true"
            android:layout_width="100dp"
            android:layout_height="2dp" />
        <TextView
            android:textColor="@color/white"
            android:text="or"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerVertical="true"
            android:background="#55ffffff"
            android:layout_alignParentRight="true"
            android:layout_width="100dp"
            android:layout_height="2dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/thirdPart"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_qq"
            android:src="@drawable/ic_qq"
            android:layout_centerInParent="true"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <ImageView
            android:id="@+id/iv_weibo"
            android:layout_toLeftOf="@id/iv_qq"
            android:src="@drawable/ic_weibo"
            android:layout_width="60dp"
            android:layout_marginRight="20dp"
            android:layout_height="60dp" />
        <ImageView
            android:layout_toRightOf="@id/iv_qq"
            android:id="@+id/iv_weixin"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_weixin"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </RelativeLayout>
</RelativeLayout>